# Job-Search-Fast-Api

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
database/: models.py  session.py  token.py
migrations/: env.py
migrations/versions/: 2023_10_11_2009-250c0b6f75f3_create_table_user_resume_and_vacansy.py  2023_10_21_1222-bd55925123a9_create_tables_user_vacansy_resume.py  2023_10_24_2010-0a4e52a718c3_create_table_user_vacansy_resume_comment.py  2023_11_03_2101-c906d128517a_create_table_user_role_resime_hr_.py  2023_11_25_1819-5265ef88d90b_create_table.py  2023_12_28_2231-53950b1466b7_create_table_user_role_resume_vacansy_.py
src/api/v1_handlers/: auth.py  role.py
src/auth/: config.py  manager.py
src/core/: config.py  log_config.py
src/crud/: base_classes.py  comment.py  entry.py  resume.py  role.py  user.py  user_role.py  vacansy.py
src/database/: session.py  token.py
src/database/models/: __init__.py  comment.py  entry.py  hr.py  resume.py  role.py  user.py  user_role.py  vacansy.py
src/resume/: dals.py  filter.py  handlers.py  models.py  schema.py  service.py
src/schemas/: comment.py  entry.py  resume.py  role.py  token.py  user.py  vacansy.py
src/services/: auth.py  role.py
src/services.py/: auth.py
src/users/: models.py  router.py  schemas.py
src/utils/: filter.py  token_manager.py
src/vacansy/: dals.py  filter.py  handlers.py  models.py  schema.py  service.py
users/: config.py  dals.py  handlers.py  manager.py  models.py  router.py  schemas.py
