[tool.poetry]
name = "job-search"
version = "0.1.0"
description = ""
authors = ["Idel Fazletdinov <fvi-it@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.108.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
fastapi-pagination = "^0.12.14"
bcrypt = "^4.1.2"
jwt = "^1.3.1"
backoff = "^2.2.1"
redis = "^5.0.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
